; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-source.c_set_planar420_sizes.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-source.c_set_planar420_sizes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_source = type { i32*, i32*, i32, i8** }
%struct.obs_source_frame = type { i32, i32 }

@GS_R8 = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.obs_source*, %struct.obs_source_frame*)* @set_planar420_sizes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_planar420_sizes(%struct.obs_source* %0, %struct.obs_source_frame* %1) #0 {
  %3 = alloca %struct.obs_source*, align 8
  %4 = alloca %struct.obs_source_frame*, align 8
  store %struct.obs_source* %0, %struct.obs_source** %3, align 8
  store %struct.obs_source_frame* %1, %struct.obs_source_frame** %4, align 8
  %5 = load %struct.obs_source_frame*, %struct.obs_source_frame** %4, align 8
  %6 = getelementptr inbounds %struct.obs_source_frame, %struct.obs_source_frame* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.obs_source*, %struct.obs_source** %3, align 8
  %9 = getelementptr inbounds %struct.obs_source, %struct.obs_source* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 0
  store i32 %7, i32* %11, align 4
  %12 = load %struct.obs_source_frame*, %struct.obs_source_frame** %4, align 8
  %13 = getelementptr inbounds %struct.obs_source_frame, %struct.obs_source_frame* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = sdiv i32 %14, 2
  %16 = load %struct.obs_source*, %struct.obs_source** %3, align 8
  %17 = getelementptr inbounds %struct.obs_source, %struct.obs_source* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 1
  store i32 %15, i32* %19, align 4
  %20 = load %struct.obs_source_frame*, %struct.obs_source_frame** %4, align 8
  %21 = getelementptr inbounds %struct.obs_source_frame, %struct.obs_source_frame* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = sdiv i32 %22, 2
  %24 = load %struct.obs_source*, %struct.obs_source** %3, align 8
  %25 = getelementptr inbounds %struct.obs_source, %struct.obs_source* %24, i32 0, i32 0
  %26 = load i32*, i32** %25, align 8
  %27 = getelementptr inbounds i32, i32* %26, i64 2
  store i32 %23, i32* %27, align 4
  %28 = load %struct.obs_source_frame*, %struct.obs_source_frame** %4, align 8
  %29 = getelementptr inbounds %struct.obs_source_frame, %struct.obs_source_frame* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.obs_source*, %struct.obs_source** %3, align 8
  %32 = getelementptr inbounds %struct.obs_source, %struct.obs_source* %31, i32 0, i32 1
  %33 = load i32*, i32** %32, align 8
  %34 = getelementptr inbounds i32, i32* %33, i64 0
  store i32 %30, i32* %34, align 4
  %35 = load %struct.obs_source_frame*, %struct.obs_source_frame** %4, align 8
  %36 = getelementptr inbounds %struct.obs_source_frame, %struct.obs_source_frame* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 4
  %38 = sdiv i32 %37, 2
  %39 = load %struct.obs_source*, %struct.obs_source** %3, align 8
  %40 = getelementptr inbounds %struct.obs_source, %struct.obs_source* %39, i32 0, i32 1
  %41 = load i32*, i32** %40, align 8
  %42 = getelementptr inbounds i32, i32* %41, i64 1
  store i32 %38, i32* %42, align 4
  %43 = load %struct.obs_source_frame*, %struct.obs_source_frame** %4, align 8
  %44 = getelementptr inbounds %struct.obs_source_frame, %struct.obs_source_frame* %43, i32 0, i32 1
  %45 = load i32, i32* %44, align 4
  %46 = sdiv i32 %45, 2
  %47 = load %struct.obs_source*, %struct.obs_source** %3, align 8
  %48 = getelementptr inbounds %struct.obs_source, %struct.obs_source* %47, i32 0, i32 1
  %49 = load i32*, i32** %48, align 8
  %50 = getelementptr inbounds i32, i32* %49, i64 2
  store i32 %46, i32* %50, align 4
  %51 = load i8*, i8** @GS_R8, align 8
  %52 = load %struct.obs_source*, %struct.obs_source** %3, align 8
  %53 = getelementptr inbounds %struct.obs_source, %struct.obs_source* %52, i32 0, i32 3
  %54 = load i8**, i8*** %53, align 8
  %55 = getelementptr inbounds i8*, i8** %54, i64 0
  store i8* %51, i8** %55, align 8
  %56 = load i8*, i8** @GS_R8, align 8
  %57 = load %struct.obs_source*, %struct.obs_source** %3, align 8
  %58 = getelementptr inbounds %struct.obs_source, %struct.obs_source* %57, i32 0, i32 3
  %59 = load i8**, i8*** %58, align 8
  %60 = getelementptr inbounds i8*, i8** %59, i64 1
  store i8* %56, i8** %60, align 8
  %61 = load i8*, i8** @GS_R8, align 8
  %62 = load %struct.obs_source*, %struct.obs_source** %3, align 8
  %63 = getelementptr inbounds %struct.obs_source, %struct.obs_source* %62, i32 0, i32 3
  %64 = load i8**, i8*** %63, align 8
  %65 = getelementptr inbounds i8*, i8** %64, i64 2
  store i8* %61, i8** %65, align 8
  %66 = load %struct.obs_source*, %struct.obs_source** %3, align 8
  %67 = getelementptr inbounds %struct.obs_source, %struct.obs_source* %66, i32 0, i32 2
  store i32 3, i32* %67, align 8
  ret i32 1
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
